CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(C__Learning)

SET(CMAKE_CXX_STANDARD 11)
AUX_SOURCE_DIRECTORY(class2 CLASS2_SRC)
AUX_SOURCE_DIRECTORY(super SUPER_SRC)
AUX_SOURCE_DIRECTORY(spreadsheet SPREAD_SRC)

ADD_EXECUTABLE(C__Learning main.cpp super/Super.cpp super/Super.h)

ADD_EXECUTABLE(class2 ${CLASS2_SRC})
ADD_EXECUTABLE(spreadsheet ${SPREAD_SRC})

ADD_EXECUTABLE(super ${SUPER_SRC} super/Sub.cpp super/Sub.h)